3/3.03/todos/manifests/service-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-db-service
spec:
  type: ClusterIP
  selector:
    app: todos-backend-db
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 3002
