3/3.03/todos/manifests/service-response.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-response-db-svc
spec:
  type: ClusterIP
  selector:
    app: todos-frontend-db
  ports:
    - port: 2345
      protocol: TCP
      targetPort: 3000
